@@ -1,3 +1,8 @@
+2005-11-04  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/rs6000/rs6000.c (output_toc): Make "offset" HOST_WIDE_INT.
+	Use associated print macros.
+
 2005-11-03  Joseph S. Myers  <joseph@codesourcery.com>
 
 	PR c++/17964
